# AoC2024

./: Cargo.toml  README.md
src/: lib.rs
src/day01/: part1.rs  part2.rs
src/day02/: part1.rs  part2.rs
src/day03/: part1.rs  part2.rs
src/day04/: part1.rs  part2.rs
